--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,31 @@
 /dataSources.local.xml
 .idea/
 *.iml
+
+# Dependencies
 node_modules/
+
+# Build output
+/dist/
+*.map
+
+# Environment variables
+.env
+.env.local
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+/dist/
